Fixed styling issues: 1. Fixed Log in and Registration text alignment 2. Made buying and selling stock a tab on the top of the screen rather than just a hyperlink on the bottom of the homepage 3. Addressed styling in css file

--- a/bigbucks/static/style.css
+++ b/bigbucks/static/style.css
@@ -132,4 +132,8 @@ html {
     align-self: start;
     min-width: 10em;
   }
+
+  .nav-link {
+    margin-right: 20px; 
+  }
   
